Update documentation to deploy CF on bare-metal environment